# pain3d

./: CMakeLists.txt  build.sh  ddd.mtl
src/: Arrows.cpp  Arrows.h  Cube.h  GLOutput.cpp  GLOutput.h  Grid.h  MainWindow.cpp  MainWindow.h  Mesh.cpp  Mesh.h  RenderItem.h  TransformDisplay.cpp  TransformDisplay.h  main.cpp  pain3d.ui
